Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/AActor.h

	DOTNET_EXPORT auto E_AActor_K2_AttachToActor(AActor* Self, AActor* ParentActor, char* SocketName, EAttachmentRule LocationRule, EAttachmentRule RotationRule, EAttachmentRule ScaleRule, bool bWeldSimulatedBodies)
	{
		auto _p0 = ParentActor;
		auto _p1 = ConvertFromManage_FName(SocketName);
		auto _p2 = LocationRule;
		auto _p3 = RotationRule;
		auto _p4 = ScaleRule;
		auto _p5 = bWeldSimulatedBodies;
		Self->K2_AttachToActor(_p0, _p1, _p2, _p3, _p4, _p5);
	}
	DOTNET_EXPORT auto E_AActor_K2_AttachToComponent(AActor* Self, USceneComponent* Parent, char* SocketName, EAttachmentRule LocationRule, EAttachmentRule RotationRule, EAttachmentRule ScaleRule, bool bWeldSimulatedBodies)
	{
		auto _p0 = Parent;
		auto _p1 = ConvertFromManage_FName(SocketName);
		auto _p2 = LocationRule;
		auto _p3 = RotationRule;
		auto _p4 = ScaleRule;
		auto _p5 = bWeldSimulatedBodies;
		Self->K2_AttachToComponent(_p0, _p1, _p2, _p3, _p4, _p5);
	}
	DOTNET_EXPORT auto E_AActor_K2_DestroyActor(AActor* Self)
	{
		Self->K2_DestroyActor();
	}
	DOTNET_EXPORT auto E_AActor_K2_DestroyComponent(AActor* Self, UActorComponent* Component)
	{
		auto _p0 = Component;
		Self->K2_DestroyComponent(_p0);
	}
	DOTNET_EXPORT auto E_AActor_K2_DetachFromActor(AActor* Self, EDetachmentRule LocationRule, EDetachmentRule RotationRule, EDetachmentRule ScaleRule)
	{
		auto _p0 = LocationRule;
		auto _p1 = RotationRule;
		auto _p2 = ScaleRule;
		Self->K2_DetachFromActor(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_AActor_K2_GetActorLocation(AActor* Self)
	{
		return (INT_PTR) new FVector(Self->K2_GetActorLocation());
	}
	DOTNET_EXPORT auto E_AActor_K2_GetActorRotation(AActor* Self)
	{
		return (INT_PTR) new FRotator(Self->K2_GetActorRotation());
	}
	DOTNET_EXPORT auto E_AActor_K2_GetRootComponent(AActor* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->K2_GetRootComponent());
	}
	DOTNET_EXPORT auto E_AActor_K2_OnBecomeViewTarget(AActor* Self, APlayerController* PC)
	{
		auto _p0 = PC;
		Self->K2_OnBecomeViewTarget(_p0);
	}
	DOTNET_EXPORT auto E_AActor_K2_OnEndViewTarget(AActor* Self, APlayerController* PC)
	{
		auto _p0 = PC;
		Self->K2_OnEndViewTarget(_p0);
	}
	DOTNET_EXPORT auto E_AActor_K2_OnReset(AActor* Self)
	{
		Self->K2_OnReset();
	}
	DOTNET_EXPORT auto E_AActor_K2_SetActorLocation(AActor* Self, INT_PTR NewLocation, bool bSweep, INT_PTR SweepHitResult, bool bTeleport)
	{
		auto _p0 = *(FVector*)NewLocation;
		auto _p1 = bSweep;
		auto& _p2 = *(FHitResult*)SweepHitResult;
		auto _p3 = bTeleport;
		return Self->K2_SetActorLocation(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_K2_SetActorLocationAndRotation(AActor* Self, INT_PTR NewLocation, INT_PTR NewRotation, bool bSweep, INT_PTR SweepHitResult, bool bTeleport)
	{
		auto _p0 = *(FVector*)NewLocation;
		auto _p1 = *(FRotator*)NewRotation;
		auto _p2 = bSweep;
		auto& _p3 = *(FHitResult*)SweepHitResult;
		auto _p4 = bTeleport;
		return Self->K2_SetActorLocationAndRotation(_p0, _p1, _p2, _p3, _p4);
	}
	DOTNET_EXPORT auto E_AActor_K2_SetActorRelativeLocation(AActor* Self, INT_PTR NewRelativeLocation, bool bSweep, INT_PTR SweepHitResult, bool bTeleport)
	{
		auto _p0 = *(FVector*)NewRelativeLocation;
		auto _p1 = bSweep;
		auto& _p2 = *(FHitResult*)SweepHitResult;
		auto _p3 = bTeleport;
		Self->K2_SetActorRelativeLocation(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_K2_SetActorRelativeRotation(AActor* Self, INT_PTR NewRelativeRotation, bool bSweep, INT_PTR SweepHitResult, bool bTeleport)
	{
		auto _p0 = *(FRotator*)NewRelativeRotation;
		auto _p1 = bSweep;
		auto& _p2 = *(FHitResult*)SweepHitResult;
		auto _p3 = bTeleport;
		Self->K2_SetActorRelativeRotation(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_K2_SetActorRelativeTransform(AActor* Self, INT_PTR NewRelativeTransform, bool bSweep, INT_PTR SweepHitResult, bool bTeleport)
	{
		auto& _p0 = *(FTransform*)NewRelativeTransform;
		auto _p1 = bSweep;
		auto& _p2 = *(FHitResult*)SweepHitResult;
		auto _p3 = bTeleport;
		Self->K2_SetActorRelativeTransform(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_K2_SetActorRotation(AActor* Self, INT_PTR NewRotation, bool bTeleportPhysics)
	{
		auto _p0 = *(FRotator*)NewRotation;
		auto _p1 = bTeleportPhysics;
		return Self->K2_SetActorRotation(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_K2_SetActorTransform(AActor* Self, INT_PTR NewTransform, bool bSweep, INT_PTR SweepHitResult, bool bTeleport)
	{
		auto& _p0 = *(FTransform*)NewTransform;
		auto _p1 = bSweep;
		auto& _p2 = *(FHitResult*)SweepHitResult;
		auto _p3 = bTeleport;
		return Self->K2_SetActorTransform(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_K2_TeleportTo(AActor* Self, INT_PTR DestLocation, INT_PTR DestRotation)
	{
		auto _p0 = *(FVector*)DestLocation;
		auto _p1 = *(FRotator*)DestRotation;
		return Self->K2_TeleportTo(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_LifeSpanExpired(AActor* Self)
	{
		Self->LifeSpanExpired();
	}
	DOTNET_EXPORT auto E_AActor_MakeNoise(AActor* Self, float Loudness, APawn* NoiseInstigator, INT_PTR NoiseLocation, float MaxRange, char* Tag)
	{
		auto _p0 = Loudness;
		auto _p1 = NoiseInstigator;
		auto _p2 = *(FVector*)NoiseLocation;
		auto _p3 = MaxRange;
		auto _p4 = ConvertFromManage_FName(Tag);
		Self->MakeNoise(_p0, _p1, _p2, _p3, _p4);
	}
	DOTNET_EXPORT auto E_AActor_MakeNoiseImpl(AActor* Self, AActor* NoiseMaker, float Loudness, APawn* NoiseInstigator, INT_PTR NoiseLocation, float MaxRange, char* Tag)
	{
		auto _p0 = NoiseMaker;
		auto _p1 = Loudness;
		auto _p2 = NoiseInstigator;
		auto& _p3 = *(FVector*)NoiseLocation;
		auto _p4 = MaxRange;
		auto _p5 = ConvertFromManage_FName(Tag);
		Self->MakeNoiseImpl(_p0, _p1, _p2, _p3, _p4, _p5);
	}
	DOTNET_EXPORT auto E_AActor_MarkComponentsAsPendingKill(AActor* Self)
	{
		Self->MarkComponentsAsPendingKill();
	}
	DOTNET_EXPORT auto E_AActor_MarkComponentsRenderStateDirty(AActor* Self)
	{
		Self->MarkComponentsRenderStateDirty();
	}
	DOTNET_EXPORT auto E_AActor_NotifyActorBeginCursorOver(AActor* Self)
	{
		Self->NotifyActorBeginCursorOver();
	}
	DOTNET_EXPORT auto E_AActor_NotifyActorBeginOverlap(AActor* Self, AActor* OtherActor)
	{
		auto _p0 = OtherActor;
		Self->NotifyActorBeginOverlap(_p0);
	}
	DOTNET_EXPORT auto E_AActor_NotifyActorEndCursorOver(AActor* Self)
	{
		Self->NotifyActorEndCursorOver();
	}
	DOTNET_EXPORT auto E_AActor_NotifyActorEndOverlap(AActor* Self, AActor* OtherActor)
	{
		auto _p0 = OtherActor;
		Self->NotifyActorEndOverlap(_p0);
	}
	DOTNET_EXPORT auto E_AActor_NotifyHit(AActor* Self, UPrimitiveComponent* MyComp, AActor* Other, UPrimitiveComponent* OtherComp, bool bSelfMoved, INT_PTR HitLocation, INT_PTR HitNormal, INT_PTR NormalImpulse, INT_PTR Hit)
	{
		auto _p0 = MyComp;
		auto _p1 = Other;
		auto _p2 = OtherComp;
		auto _p3 = bSelfMoved;
		auto _p4 = *(FVector*)HitLocation;
		auto _p5 = *(FVector*)HitNormal;
		auto _p6 = *(FVector*)NormalImpulse;
		auto& _p7 = *(FHitResult*)Hit;
		Self->NotifyHit(_p0, _p1, _p2, _p3, _p4, _p5, _p6, _p7);
	}
	DOTNET_EXPORT auto E_AActor_OnConstruction(AActor* Self, INT_PTR Transform)
	{
		auto& _p0 = *(FTransform*)Transform;
		Self->OnConstruction(_p0);
	}
	DOTNET_EXPORT auto E_AActor_OnRep_AttachmentReplication(AActor* Self)
	{
		Self->OnRep_AttachmentReplication();
	}
	DOTNET_EXPORT auto E_AActor_OnRep_Instigator(AActor* Self)
	{
		Self->OnRep_Instigator();
	}
	DOTNET_EXPORT auto E_AActor_OnRep_Owner(AActor* Self)
	{
		((E_PROTECTED_WRAP_AActor*)Self)->OnRep_Owner_WRAP();
	}
	DOTNET_EXPORT auto E_AActor_OnRep_ReplicatedMovement(AActor* Self)
	{
		Self->OnRep_ReplicatedMovement();
	}
	DOTNET_EXPORT auto E_AActor_OnRep_ReplicateMovement(AActor* Self)
	{
		Self->OnRep_ReplicateMovement();
	}
	DOTNET_EXPORT auto E_AActor_OnReplicationPausedChanged(AActor* Self, bool bIsReplicationPaused)
	{
		auto _p0 = bIsReplicationPaused;
		Self->OnReplicationPausedChanged(_p0);
	}
	DOTNET_EXPORT auto E_AActor_OnSubobjectCreatedFromReplication(AActor* Self, UObject* NewSubobject)
	{
		auto _p0 = NewSubobject;
		Self->OnSubobjectCreatedFromReplication(_p0);
	}
	DOTNET_EXPORT auto E_AActor_OnSubobjectDestroyFromReplication(AActor* Self, UObject* Subobject)
	{
		auto _p0 = Subobject;
		Self->OnSubobjectDestroyFromReplication(_p0);
	}
	DOTNET_EXPORT auto E_AActor_OutsideWorldBounds(AActor* Self)
	{
		Self->OutsideWorldBounds();
	}
	DOTNET_EXPORT auto E_AActor_OwnsComponent(AActor* Self, UActorComponent* Component)
	{
		auto _p0 = Component;
		return Self->OwnsComponent(_p0);
	}
	DOTNET_EXPORT auto E_AActor_PostActorConstruction(AActor* Self)
	{
		Self->PostActorConstruction();
	}
	DOTNET_EXPORT auto E_AActor_PostActorCreated(AActor* Self)
	{
		Self->PostActorCreated();
	}
	DOTNET_EXPORT auto E_AActor_PostCreateBlueprintComponent(AActor* Self, UActorComponent* NewActorComp)
	{
		auto _p0 = NewActorComp;
		((E_PROTECTED_WRAP_AActor*)Self)->PostCreateBlueprintComponent_WRAP(_p0);
	}
	DOTNET_EXPORT auto E_AActor_PostInitializeComponents(AActor* Self)
	{
		Self->PostInitializeComponents();
	}
	DOTNET_EXPORT auto E_AActor_PostNetInit(AActor* Self)
	{
		Self->PostNetInit();
	}
	DOTNET_EXPORT auto E_AActor_PostNetReceiveLocationAndRotation(AActor* Self)
	{
		Self->PostNetReceiveLocationAndRotation();
	}
	DOTNET_EXPORT auto E_AActor_PostNetReceivePhysicState(AActor* Self)
	{
		Self->PostNetReceivePhysicState();
	}
	DOTNET_EXPORT auto E_AActor_PostNetReceiveRole(AActor* Self)
	{
		Self->PostNetReceiveRole();
	}
	DOTNET_EXPORT auto E_AActor_PostNetReceiveVelocity(AActor* Self, INT_PTR NewVelocity)
	{
		auto& _p0 = *(FVector*)NewVelocity;
		Self->PostNetReceiveVelocity(_p0);
	}
	DOTNET_EXPORT auto E_AActor_PostRegisterAllComponents(AActor* Self)
	{
		Self->PostRegisterAllComponents();
	}
	DOTNET_EXPORT auto E_AActor_PostSpawnInitialize(AActor* Self, INT_PTR SpawnTransform, AActor* InOwner, APawn* InInstigator, bool bRemoteOwned, bool bNoFail, bool bDeferConstruction)
	{
		auto& _p0 = *(FTransform*)SpawnTransform;
		auto _p1 = InOwner;
		auto _p2 = InInstigator;
		auto _p3 = bRemoteOwned;
		auto _p4 = bNoFail;
		auto _p5 = bDeferConstruction;
		Self->PostSpawnInitialize(_p0, _p1, _p2, _p3, _p4, _p5);
	}
	DOTNET_EXPORT auto E_AActor_PostUnregisterAllComponents(AActor* Self)
	{
		Self->PostUnregisterAllComponents();
	}
	DOTNET_EXPORT auto E_AActor_PreInitializeComponents(AActor* Self)
	{
		Self->PreInitializeComponents();
	}
	DOTNET_EXPORT auto E_AActor_PreRegisterAllComponents(AActor* Self)
	{
		Self->PreRegisterAllComponents();
	}
	DOTNET_EXPORT auto E_AActor_PrestreamTextures(AActor* Self, float Seconds, bool bEnableStreaming, int32 CinematicTextureGroups)
	{
		auto _p0 = Seconds;
		auto _p1 = bEnableStreaming;
		auto _p2 = CinematicTextureGroups;
		Self->PrestreamTextures(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_AActor_ProcessUserConstructionScript(AActor* Self)
	{
		((E_PROTECTED_WRAP_AActor*)Self)->ProcessUserConstructionScript_WRAP();
	}
	DOTNET_EXPORT auto E_AActor_ReceiveActorBeginCursorOver(AActor* Self)
	{
		Self->ReceiveActorBeginCursorOver();
	}
	DOTNET_EXPORT auto E_AActor_ReceiveActorBeginOverlap(AActor* Self, AActor* OtherActor)
	{
		auto _p0 = OtherActor;
		Self->ReceiveActorBeginOverlap(_p0);
	}
	DOTNET_EXPORT auto E_AActor_ReceiveActorEndCursorOver(AActor* Self)
	{
		Self->ReceiveActorEndCursorOver();
	}
	DOTNET_EXPORT auto E_AActor_ReceiveActorEndOverlap(AActor* Self, AActor* OtherActor)
	{
		auto _p0 = OtherActor;
		Self->ReceiveActorEndOverlap(_p0);
	}